# VolcaniBot

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SETUP.md  requirements.txt
src/agribot_bringup/launch/: real_robot.launch.py
src/volcanibot_bringup/: CMakeLists.txt  package.xml
src/volcanibot_bringup/launch/: real_robot.launch.py
src/volcanibot_controller/: CMakeLists.txt  package.xml
src/volcanibot_controller/config/: agribot_controllers.yaml  joy_teleop.yaml  twist_mux_joy.yaml  twist_mux_topics.yaml  virtual_joy_teleop.yaml
src/volcanibot_controller/launch/: controller.launch.py  joy_stick_teleop.launch.py
src/volcanibot_controller/src/: twist_relay.cpp
src/volcanibot_description/: CMakeLists.txt  package.xml
src/volcanibot_description/launch/: display.launch.py
src/volcanibot_description/rviz/: display.rviz  real_robot.rviz
src/volcanibot_description/urdf/: volcanibot.xacro
src/volcanibot_diff_controller/: CMakeLists.txt  irctc_udev.rules  package.xml  volcanibot_diff_controller.xml
src/volcanibot_diff_controller/bringup/config/: diffbot_controllers.yaml  joy_teleop.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/volcanibot_diff_controller/bringup/launch/: diffdrive.launch.py
src/volcanibot_diff_controller/description/ros2_control/: diffbot.ros2_control.xacro
src/volcanibot_diff_controller/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
src/volcanibot_diff_controller/include/volcanibot_diff_controller/: base_comms.hpp  diffdrive_system.hpp  moons_comms.hpp  roboteq_comms.hpp  visibility_control.h  zlac8015D_comms.hpp  zlac8015_comms.hpp
src/volcanibot_diff_controller/launch/: diffdrive.launch.py  joy_stick_teleop.launch.py
src/volcanibot_diff_controller/scripts/: cmd_vel_converter.py  interactive_roboteq.py  test_roboteq.py  yolo_joy_toggle.py
src/volcanibot_diff_controller/src/: diffdrive_system.cpp
src/volcanibot_follow_person/: CMakeLists.txt  package.xml
src/volcanibot_follow_person/config/: config.yaml
src/volcanibot_follow_person/launch/: follow_person.launch.py
src/volcanibot_follow_person/volcanibot_follow_person/: arducam_publisher.py  detect_person.py  person_target.py
