cmake_minimum_required(VERSION 3.8)
project(volcanibot_controller)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()


find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2 REQUIRED)

# include_directories(include)

add_executable(twist_relay src/twist_relay.cpp)
ament_target_dependencies(twist_relay rclcpp geometry_msgs)


ament_python_install_package(${PROJECT_NAME})

# install(
#   DIRECTORY include
#   DESTINATION include
# )

install(TARGETS
  twist_relay
  DESTINATION lib/${PROJECT_NAME}
)


install(
  DIRECTORY config launch 
  DESTINATION share/${PROJECT_NAME}
)


ament_package()
