cmake_minimum_required(VERSION 3.8)
project(volcanibot_follow_person)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)


find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(OpenCV REQUIRED)


include_directories(include)



ament_python_install_package(${PROJECT_NAME})

install(
  DIRECTORY include
  DESTINATION include
)



install(DIRECTORY
  launch config 
  DESTINATION share/${PROJECT_NAME}
)

install(PROGRAMS
  ${PROJECT_NAME}/arducam_publisher.py
  ${PROJECT_NAME}/detect_person.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
